# azure-ai-operator

./: Dockerfile  README.md  pyproject.toml  requirements.txt
k8s/: deployment.yaml  service.yaml
src/: azure_tools.py  chainlit_app.py
